--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+      "test": "jest",
     "test:e2e": "playwright test",
     "test:show": "playwright show-report"
   },
@@ -16,6 +17,8 @@
     "@pinecone-database/pinecone": "^3.0.3",
     "ai": "^3.3.39",
     "cheerio": "^1.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.2.11",
     "md5": "^2.3.0",
     "next": "^14.2.11",
     "node-html-markdown": "^1.3.0",
@@ -29,15 +32,20 @@
     "tailwindcss": "3.4.11",
     "typescript": "5.6.2",
     "unified": "^11.0.5",
-    "vue": "^3.5.6",
-    "eslint": "^8.0.0",
-    "eslint-config-next": "14.2.11"
+    "vue": "^3.5.6"
   },
   "devDependencies": {
     "@playwright/test": "^1.47.1",
+    "@types/jest": "^29.5.13",
     "@types/md5": "^2.3.5",
     "@types/node": "22.5.5",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "18.3.6",
-    "@types/react-dom": "18.3.0"
+    "@types/react-dom": "18.3.0",
+    "jest": "^29.7.0",
+    "node-fetch": "^2.7.0",
+    "ts-jest": "^29.2.5"
   }
+  
 }
+
