--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-      "test": "jest",
+    "test": "jest",
     "test:e2e": "playwright test",
     "test:show": "playwright show-report"
   },
@@ -27,6 +27,7 @@
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
+    "react-quill": "^2.0.0",
     "sswr": "^2.1.0",
     "svelte": "^4.2.19",
     "tailwindcss": "3.4.11",
@@ -46,6 +47,4 @@
     "node-fetch": "^2.7.0",
     "ts-jest": "^29.2.5"
   }
-  
 }
-
