--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cheerio": "^1.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.2.11",
+    "lucide-react": "^0.454.0",
     "md5": "^2.3.0",
     "next": "^14.2.11",
     "node-html-markdown": "^1.3.0",
