--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "md5": "^2.3.0",
     "next": "^14.2.11",
     "node-html-markdown": "^1.3.0",
+    "nprogress": "^0.2.0",
     "openai-edge": "^1.2.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -42,6 +43,7 @@
     "@types/md5": "^2.3.5",
     "@types/node": "22.5.5",
     "@types/node-fetch": "^2.6.11",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "18.3.6",
     "@types/react-dom": "18.3.0",
     "jest": "^29.7.0",
